// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricsListItem is rendered with many subscriptions 1`] = `
<div
  className="panel panel-danger"
>
  <div
    className="panel-heading"
  >
    monthly
  </div>
  <ul
    className="list-group"
  >
    <li
      className="list-group-item"
    >
      Total Subscribed: 
    </li>
    <li
      className="list-group-item"
    >
      Participants this week: 
    </li>
  </ul>
</div>
`;

exports[`MetricsListItem is rendered with one subscription 1`] = `
<div
  className="panel panel-danger"
>
  <div
    className="panel-heading"
  >
    weekly
  </div>
  <ul
    className="list-group"
  >
    <li
      className="list-group-item"
    >
      Total Subscribed: 
    </li>
    <li
      className="list-group-item"
    >
      Participants this week: 
    </li>
  </ul>
</div>
`;
